--- a/index.html
+++ b/index.html
@@ -10,166 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/base.css">
   <style>
-    :root {
-      --bg: #ffffff;
-      --surface: #ffffff;
-      --text: #1b1e22;
-      --muted: #5b6471;
-      --ring: rgba(0, 0, 0, .08);
-      --accent: #6fa387;
-      --btn-bg: #ffffff;
-      --btn-text: #111;
-      --btn-border: #d7dde5;
-      --maxw: 1080px;
-      --bg-grad: radial-gradient(1200px 800px at 10% 15%, #f6fffb 0, transparent 50%), radial-gradient(1200px 900px at 90% 20%, #fff7fb 0, transparent 55%), radial-gradient(1000px 700px at 40% 90%, #f5f9ff 0, transparent 50%)
-    }
-
-    body {
-      margin: 0;
-      background: var(--bg);
-      background-image: var(--bg-grad);
-      color: var(--text);
-      font: 16px/1.65 Inter, system-ui, -apple-system, Segoe UI, Roboto, sans-serif
-    }
-
-    ::selection {
-      background: color-mix(in oklab, var(--accent) 60%, transparent);
-      color: var(--text)
-    }
-
-    :root[data-theme="carlos"] {
-      --bg: #dbe6ff;
-      --surface: #ffffff;
-      --text: #0b1220;
-      --muted: #3f527a;
-      --ring: rgba(0, 0, 0, .12);
-      --accent: #0d347e;
-      --btn-bg: #ffffff;
-      --btn-text: #0b1220;
-      --btn-border: #3260b3;
-      --bg-grad: none
-    }
-
-    :root[data-theme="lando"] {
-      --bg: #0f0f10;
-      --surface: #1b1b1d;
-      --text: #f3f4f6;
-      --muted: #e2e6ee;
-      --ring: #2d2f33;
-      --accent: #ff8000;
-      --btn-bg: #2a2a2a;
-      --btn-text: #ffeede;
-      --btn-border: #3a3a3d;
-      --bg-grad: none
-    }
-
-    * {
-      box-sizing: border-box
-    }
-
-    h1,
-    h2 {
-      font-family: "Playfair Display", Georgia, serif
-    }
-
-    .container {
-      max-width: var(--maxw);
-      margin: 0 auto;
-      padding: 0 22px
-    }
-
-    header.site {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      background: color-mix(in oklab, var(--bg) 90%, transparent);
-      backdrop-filter: blur(8px);
-      border-bottom: 1px solid var(--ring)
-    }
-
-    .site-inner {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      height: 64px
-    }
-
-    .brand {
-      display: flex;
-      gap: 12px;
-      align-items: center;
-      font-weight: 800
-    }
-
-    .nav a {
-      margin-left: 14px;
-      color: var(--text);
-      font-weight: 700;
-      text-decoration: none;
-      padding: 6px 12px;
-      border-radius: 12px;
-      border: 1px solid transparent;
-      position: relative
-    }
-
-    .nav a::after {
-      content: "";
-      position: absolute;
-      left: 10px;
-      right: 10px;
-      bottom: 4px;
-      height: 2px;
-      background: color-mix(in oklab, var(--accent) 35%, transparent);
-      opacity: 0;
-      transition: opacity .2s;
-      border-radius: 2px
-    }
-
-    .nav a:hover::after {
-      opacity: 1
-    }
-
-    .avatar {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid color-mix(in oklab, var(--accent) 40%, #fff)
-    }
-
-    .avatar-wrap {
-      position: relative;
-      display: inline-block
-    }
-
-    .avatar-badge {
-      position: absolute;
-      right: -5px;
-      bottom: -5px;
-      width: 28px;
-      height: 28px;
-      border-radius: 50%;
-      background: #fff;
-      border: 2px solid var(--ring);
-      display: grid;
-      place-items: center;
-      font: 700 12px/1 "Playfair Display", serif;
-      color: var(--accent)
-    }
-
-    :root[data-theme="carlos"] .avatar-badge {
-      background: #fff url("assets/images/williams.png") center/90% no-repeat;
-      font-size: 0;
-      border-color: #0d347e
-    }
-
-    :root[data-theme="lando"] .avatar-badge {
-      background: #fff url("assets/images/mclaren.png") center/90% no-repeat;
-      font-size: 0;
-      border-color: #ff8000
-    }
-
     .hero {
       display: grid;
       place-items: center;
@@ -190,40 +32,6 @@
       flex-wrap: wrap;
       justify-content: center;
       color: var(--muted)
-    }
-
-    .btn {
-      appearance: none;
-      border: 1px solid var(--btn-border);
-      background: var(--btn-bg);
-      color: var(--btn-text);
-      padding: 10px 14px;
-      border-radius: 12px;
-      font-weight: 700;
-      cursor: pointer;
-      transition: transform .08s
-    }
-
-    .btn:active {
-      transform: translateY(1px)
-    }
-
-    .btn:hover {
-      background: var(--accent);
-      color: #fff;
-      border-color: transparent
-    }
-
-    :root[data-theme="lando"] .btn {
-      background: var(--btn-bg);
-      color: var(--btn-text);
-      border-color: var(--btn-border)
-    }
-
-    :root[data-theme="lando"] .btn:hover {
-      background: var(--accent);
-      color: #101010;
-      border-color: transparent
     }
 
     .hub {
@@ -253,39 +61,9 @@
       display: inline-block
     }
 
-    .cta::before {
-      content: "";
-      position: absolute;
-      inset: -2px;
-      pointer-events: none;
-      background: linear-gradient(120deg, transparent 0 40%, color-mix(in oklab, var(--accent) 22%, transparent) 50%, transparent 60% 100%);
-      opacity: 0;
-      transition: opacity .25s
-    }
-
-    .cta::after {
-      content: "➤";
-      position: absolute;
-      right: 12px;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 14px;
-      opacity: .45;
-      transition: transform .15s, opacity .15s
-    }
-
     .cta:hover {
       transform: translateY(-2px);
       box-shadow: 0 16px 36px rgba(12, 21, 33, .16)
-    }
-
-    .cta:hover::before {
-      opacity: 1
-    }
-
-    .cta:hover::after {
-      transform: translate(2px, -50%);
-      opacity: .8
     }
 
     .sequence-overlay {
@@ -311,14 +89,6 @@
       border-radius: 20px;
       padding: 20px 24px;
       box-shadow: 0 22px 48px rgba(12, 21, 33, .32)
-    }
-
-    .seq-title {
-      margin-top: 10px;
-      font: 700 clamp(16px, 2.6vw, 22px)/1.25 "Playfair Display", Georgia, serif;
-      color: var(--text);
-      text-align: center;
-      text-shadow: 0 2px 10px rgba(0, 0, 0, .15)
     }
 
     .start-lights {
@@ -347,90 +117,11 @@
       background: #14b314
     }
 
-    .flag-badge {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      justify-content: center
-    }
-
-    .flag-svg {
-      width: 72px;
-      height: 46px;
-      display: none
-    }
-
-    .flag-wave {
-      display: block;
-      animation: wave 1.8s ease-in-out 2
-    }
-
-    @keyframes wave {
-      0% {
-        transform: skewY(0) translateX(0)
-      }
-
-      25% {
-        transform: skewY(6deg) translateX(3px)
-      }
-
-      50% {
-        transform: skewY(-6deg) translateX(-2px)
-      }
-
-      75% {
-        transform: skewY(4deg) translateX(2px)
-      }
-
-      100% {
-        transform: skewY(0) translateX(0)
-      }
-    }
-
-    footer {
-      border-top: 1px solid var(--ring);
-      padding: 18px 0;
-      color: var(--muted)
-    }
-
-    .footer-row {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 16px;
-      position: relative
-    }
-
-    .footer-launch {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      position: absolute;
-      right: 0
-    }
-
-    .flag-label {
-      font-weight: 700
-    }
-
-    .flag-btn {
-      appearance: none;
-      border: 1px solid var(--ring);
-      background: #fff;
-      padding: 10px 12px;
-      border-radius: 999px;
-      cursor: pointer;
-      font-size: 18px
-    }
-
-    :root[data-theme="lando"] .flag-btn {
-      background: #2a2a2a;
-      color: #fff;
-      border-color: #444
-    }
-
-    .seq-tray {
-      display: none
+    .seq-title {
+      margin-top: 10px;
+      font: 700 clamp(16px, 2.6vw, 22px)/1.25 "Playfair Display", Georgia, serif;
+      color: var(--text);
+      text-align: center
     }
 
     .seq-sub {
@@ -490,10 +181,42 @@
       background: #fff
     }
 
+    .footer-row {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 16px;
+      position: relative
+    }
+
+    .footer-launch {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      position: absolute;
+      right: 0
+    }
+
+    .flag-btn {
+      appearance: none;
+      border: 1px solid var(--ring);
+      background: #fff;
+      padding: 10px 12px;
+      border-radius: 999px;
+      cursor: pointer;
+      font-size: 18px
+    }
+
     :root[data-theme="lando"] .tag {
       background: #1f1f21;
       border-color: #34363a;
       color: #ffedd9
+    }
+
+    :root[data-theme="lando"] .flag-btn {
+      background: #2a2a2a;
+      color: #fff;
+      border-color: #444
     }
   </style>
 </head>
@@ -571,34 +294,18 @@
           </div>
           <div class="badge-p1">P1</div>
         </div>
-        <div class="flag-badge">
-          <svg class="flag-svg" id="flagSVG" viewBox="0 0 120 80" xmlns="http://www.w3.org/2000/svg">
-            <defs>
-              <pattern id="checks" width="20" height="20" patternUnits="userSpaceOnUse">
-                <rect width="10" height="10" fill="#111" />
-                <rect x="10" width="10" height="10" fill="#eee" />
-                <rect y="10" width="10" height="10" fill="#eee" />
-                <rect x="10" y="10" width="10" height="10" fill="#111" />
-              </pattern>
-            </defs>
-            <rect x="18" y="8" width="96" height="56" rx="6" fill="url(#checks)" stroke="#888" />
-            <rect x="8" y="6" width="8" height="64" rx="4" fill="#bcbcbc" />
-          </svg>
-        </div>
       </div>
     </div>
   </div>
 
   <script src="assets/js/confetti.js"></script>
   <script src="assets/js/driver-images.js"></script>
+  <script src="assets/js/theme.js"></script>
   <script src="assets/js/index-sequence.js"></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-    const root = document.documentElement;
-    const saved = localStorage.getItem('kc-theme'); if (saved) root.setAttribute('data-theme', saved);
-    function setThemeAndConfetti(name) { if (name === 'carlos') { root.setAttribute('data-theme', 'carlos'); localStorage.setItem('kc-theme', 'carlos'); startThemedConfetti('carlos') } if (name === 'lando') { root.setAttribute('data-theme', 'lando'); localStorage.setItem('kc-theme', 'lando'); startThemedConfetti('lando') } }
     document.querySelectorAll('button[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
-    document.getElementById('resetTheme').addEventListener('click', () => { root.removeAttribute('data-theme'); localStorage.removeItem('kc-theme'); startEmojiConfetti() });
+    document.getElementById('resetTheme').addEventListener('click', resetTheme);
     document.getElementById('flagGo').addEventListener('click', runSequence);
   </script>
 </body>
