--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       --btn-bg: #fff;
       --btn-text: #111;
       --btn-border: #d7dde5;
-      --maxw: 980px;
+      --maxw: 980px
     }
 
     :root[data-theme="carlos"] {
@@ -36,7 +36,7 @@
       --accent: #0d347e;
       --btn-bg: #fff;
       --btn-text: #0b1220;
-      --btn-border: #3260b3;
+      --btn-border: #3260b3
     }
 
     :root[data-theme="lando"] {
@@ -48,7 +48,39 @@
       --accent: #ff8000;
       --btn-bg: #232325;
       --btn-text: #f3f3f3;
-      --btn-border: #3a3a3d;
+      --btn-border: #3a3a3d
+    }
+
+    :root[data-theme="lando"] .card {
+      background: linear-gradient(180deg, #191a1c, #141416)
+    }
+
+    :root[data-theme="lando"] .linkcard {
+      background: #1c1d1f
+    }
+
+    :root[data-theme="lando"] .input,
+    :root[data-theme="lando"] .select,
+    :root[data-theme="lando"] .textarea {
+      background: #121214;
+      color: #f3f4f6;
+      border-color: #2f3136
+    }
+
+    :root[data-theme="lando"] .btn {
+      background: var(--btn-bg);
+      color: var(--btn-text);
+      border-color: var(--btn-border)
+    }
+
+    :root[data-theme="lando"] .btn:hover {
+      background: var(--accent);
+      color: #111;
+      border-color: transparent
+    }
+
+    :root:not([data-theme]) .card {
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0.92), rgba(255, 255, 255, 0.76))
     }
 
     * {
@@ -57,18 +89,19 @@
 
     ::selection {
       background: color-mix(in oklab, var(--accent) 38%, #ffffff);
-      color: #0b2b20;
+      color: #0b2b20
     }
 
     body {
       margin: 0;
-      background: var(--bg);
+      background: #fff;
+      background-image: var(--bg);
       background-attachment: fixed;
       background-repeat: no-repeat;
       background-size: 140% 140%, 150% 150%, 120% 120%;
       animation: aurora-float 18s ease-in-out infinite alternate;
       color: var(--text);
-      font: 16px/1.65 Inter, system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      font: 16px/1.65 Inter, system-ui, -apple-system, Segoe UI, Roboto, sans-serif
     }
 
     @keyframes aurora-float {
