--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       --btn-bg: #fff;
       --btn-text: #111;
       --btn-border: #d7dde5;
-      --maxw: 940px;
+      --maxw: 940px
     }
 
     :root[data-theme="carlos"] {
@@ -36,7 +36,7 @@
       --accent: #0d347e;
       --btn-bg: #fff;
       --btn-text: #0b1220;
-      --btn-border: #3260b3;
+      --btn-border: #3260b3
     }
 
     :root[data-theme="lando"] {
@@ -48,7 +48,7 @@
       --accent: #ff8000;
       --btn-bg: #232325;
       --btn-text: #f3f3f3;
-      --btn-border: #3a3a3d;
+      --btn-border: #3a3a3d
     }
 
     * {
@@ -57,18 +57,19 @@
 
     ::selection {
       background: color-mix(in oklab, var(--accent) 38%, #ffffff);
-      color: #0b2b20;
+      color: #0b2b20
     }
 
     body {
       margin: 0;
-      background: var(--bg);
+      background: #fff;
+      background-image: var(--bg);
       background-attachment: fixed;
       background-repeat: no-repeat;
       background-size: 140% 140%, 150% 150%, 120% 120%;
       animation: aurora-float 18s ease-in-out infinite alternate;
       color: var(--text);
-      font: 16px/1.65 Inter, system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      font: 16px/1.65 Inter, system-ui, -apple-system, Segoe UI, Roboto, sans-serif
     }
 
     @keyframes aurora-float {
@@ -203,6 +204,18 @@
     .btn:hover {
       background: var(--accent);
       color: #fff;
+      border-color: transparent
+    }
+
+    :root[data-theme="lando"] .btn {
+      background: var(--btn-bg);
+      color: var(--btn-text);
+      border-color: var(--btn-border)
+    }
+
+    :root[data-theme="lando"] .btn:hover {
+      background: var(--accent);
+      color: #111;
       border-color: transparent
     }
 
@@ -460,8 +473,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="label">Message</div>
-            <textarea class="textarea" id="message"
+            <div class="label">Message</div><textarea class="textarea" id="message"
               placeholder="Hi Katherine —&#10;&#10;I’m reaching out about [topic]. My timeline is [urgency]. Here’s the context…&#10;&#10;Best,&#10;[Your name]"></textarea>
           </div>
           <div class="actions"><button class="btn" id="buildMail">Open in Email ✉️</button><button class="btn"
@@ -508,27 +520,13 @@
     document.querySelectorAll('button[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
     document.getElementById('resetTheme').addEventListener('click', () => { root.removeAttribute('data-theme'); localStorage.removeItem('kc-theme'); void document.body.offsetHeight; startEmojiConfetti(); });
 
-    const topicWrap = document.getElementById('topicWrap'), subjectEl = document.getElementById('subject'),
-      urgencyEl = document.getElementById('urgency'), msgEl = document.getElementById('message');
+    const topicWrap = document.getElementById('topicWrap'), subjectEl = document.getElementById('subject'), urgencyEl = document.getElementById('urgency'), msgEl = document.getElementById('message');
     let topic = "";
-    topicWrap.addEventListener('click', (e) => {
-      const b = e.target.closest('.chip'); if (!b) return;[...topicWrap.querySelectorAll('.chip')].forEach(c => c.classList.remove('active'));
-      b.classList.add('active'); topic = b.dataset.topic;
-      if (!subjectEl.value) { const urg = urgencyEl.value ? ` — ${urgencyEl.value}` : ""; subjectEl.value = `${topic}${urg}`; }
-      if (!msgEl.value) { msgEl.value = `Hi Katherine —\n\nI’m reaching out about ${topic.toLowerCase()}. My timeline is ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]`; }
-    });
+    topicWrap.addEventListener('click', (e) => { const b = e.target.closest('.chip'); if (!b) return;[...topicWrap.querySelectorAll('.chip')].forEach(c => c.classList.remove('active')); b.classList.add('active'); topic = b.dataset.topic; if (!subjectEl.value) { const urg = urgencyEl.value ? ` — ${urgencyEl.value}` : ""; subjectEl.value = `${topic}${urg}`; } if (!msgEl.value) { msgEl.value = `Hi Katherine —\n\nI’m reaching out about ${topic.toLowerCase()}. My timeline is ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]`; } });
     function updateSubjectForUrgency() { const urg = urgencyEl.value; if (!subjectEl.value || /^([A-Za-z ]+)( — .+)?$/.test(subjectEl.value)) { const base = topic || "Opportunity"; subjectEl.value = urg ? `${base} — ${urg}` : base; } }
     urgencyEl.addEventListener('change', updateSubjectForUrgency);
-    const templates = {
-      intro: `Hi Katherine —\n\nQuick hello. Timeline: ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]`,
-      collab: `Hi Katherine —\n\nCollaboration idea around ${topic || "a feature"}.\nTimeline: ${urgencyEl.value || "flexible"}.\n\nThanks!\n[Your name]`,
-      recruiter: `Hi Katherine —\n\nI think your background could match roles we have. Timeline: ${urgencyEl.value || "this month"}.\n\nBest,\n[Recruiter]`,
-      feedback: `Hi Katherine —\n\nTried your project—feedback below.\nTimeline: ${urgencyEl.value || "whenever"}.\n\nCheers,\n[Your name]`
-    };
-    document.getElementById('applyTemplate').addEventListener('click', () => {
-      const k = (document.getElementById('template').value || "").toLowerCase(); if (!k) return;
-      msgEl.value = templates[k] || msgEl.value; if (!subjectEl.value) { const base = (k === "collab" ? "Collaboration" : k === "recruiter" ? "Recruiting" : k === "feedback" ? "Feedback" : "Intro"); subjectEl.value = topic ? `${base}: ${topic}` : base; }
-    });
+    const templates = { intro: `Hi Katherine —\n\nQuick hello. Timeline: ${urgencyEl.value || "flexible"}.\n\nBest,\n[Your name]`, collab: `Hi Katherine —\n\nCollaboration idea around ${topic || "a feature"}.\nTimeline: ${urgencyEl.value || "flexible"}.\n\nThanks!\n[Your name]`, recruiter: `Hi Katherine —\n\nI think your background could match roles we have. Timeline: ${urgencyEl.value || "this month"}.\n\nBest,\n[Recruiter]`, feedback: `Hi Katherine —\n\nTried your project—feedback below.\nTimeline: ${urgencyEl.value || "whenever"}.\n\nCheers,\n[Your name]` };
+    document.getElementById('applyTemplate').addEventListener('click', () => { const k = (document.getElementById('template').value || "").toLowerCase(); if (!k) return; msgEl.value = templates[k] || msgEl.value; if (!subjectEl.value) { const base = (k === "collab" ? "Collaboration" : k === "recruiter" ? "Recruiting" : k === "feedback" ? "Feedback" : "Intro"); subjectEl.value = topic ? `${base}: ${topic}` : base; } });
     document.getElementById('buildMail').addEventListener('click', () => { const to = "katisabela125@gmail.com"; const subj = encodeURIComponent(subjectEl.value || "Hello from your site"); const body = encodeURIComponent(msgEl.value || "Hi Katherine —"); window.location.href = `mailto:${to}?subject=${subj}&body=${body}`; });
     document.getElementById('copyAll').addEventListener('click', async () => { const all = `To: katisabela125@gmail.com\nSubject: ${subjectEl.value || "(none)"}\n\n${msgEl.value || ""}`; try { await navigator.clipboard.writeText(all); alert("Copied to clipboard!"); } catch { alert("Could not copy, sorry."); } });
   </script>
