--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
       --btn-bg: #fff;
       --btn-text: #111;
       --btn-border: #d7dde5;
-      --maxw: 1080px;
+      --maxw: 1080px
     }
 
     :root[data-theme="carlos"] {
@@ -36,7 +36,7 @@
       --accent: #0d347e;
       --btn-bg: #fff;
       --btn-text: #0b1220;
-      --btn-border: #3260b3;
+      --btn-border: #3260b3
     }
 
     :root[data-theme="lando"] {
@@ -48,7 +48,7 @@
       --accent: #ff8000;
       --btn-bg: #232325;
       --btn-text: #f3f3f3;
-      --btn-border: #3a3a3d;
+      --btn-border: #3a3a3d
     }
 
     * {
@@ -57,18 +57,19 @@
 
     ::selection {
       background: color-mix(in oklab, var(--accent) 38%, #ffffff);
-      color: #0b2b20;
+      color: #0b2b20
     }
 
     body {
       margin: 0;
-      background: var(--bg);
+      background: #fff;
+      background-image: var(--bg);
       background-attachment: fixed;
       background-repeat: no-repeat;
       background-size: 140% 140%, 150% 150%, 120% 120%;
       animation: aurora-float 18s ease-in-out infinite alternate;
       color: var(--text);
-      font: 16px/1.65 Inter, system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      font: 16px/1.65 Inter, system-ui, -apple-system, Segoe UI, Roboto, sans-serif
     }
 
     @keyframes aurora-float {
@@ -205,6 +206,18 @@
     .btn:hover {
       background: var(--accent);
       color: #fff;
+      border-color: transparent
+    }
+
+    :root[data-theme="lando"] .btn {
+      background: var(--btn-bg);
+      color: var(--btn-text);
+      border-color: var(--btn-border)
+    }
+
+    :root[data-theme="lando"] .btn:hover {
+      background: var(--accent);
+      color: #111;
       border-color: transparent
     }
 
